added lessons learned and perspective to main.tex

--- a/report/sections/reflection_conclusion/devops.tex
+++ b/report/sections/reflection_conclusion/devops.tex
@@ -1,3 +1,5 @@
+
+\section{Reflection and conclusion}
 \subsection{DevOps approach}
 One of the requirements was to make a release every week. This made us work more consistently on our tasks than in other projects before, 
 where the working peak was most of the time shortly before the hand-in date. This, we think, simulated the "real working world" way better than the other projects we did before. 
