--- a/report/sections/process_perspective/logging.tex
+++ b/report/sections/process_perspective/logging.tex
@@ -8,8 +8,8 @@
 \paragraph{} In order to manage difficulties like logs scattered across multiple sources or disparate log formats we decided to use fluentd. Fluentd is an open source data collector which processes the data from various sources, making it easier to manage and analyze. The following aspects show why we used fluentd: 
 \begin{itemize}
     \item \textbf{Unified Logging Layer:} Fluentd provides a unified platform for collecting, transforming, and routing logs from diverse sources, simplifying the log management process.
-    \item \textbf{Data Agnosticism:} Regardless of the data source—be it Prometheus metrics, Grafana dashboards, or application logs—Fluentd seamlessly collects and processes data in a unified format, fostering interoperability and ease of analysis.
-    \item \textbf{Configurable Routing:} With Fluentd, we could effortlessly configure log routing based on application or service, directing logs to specific destinations for centralized storage and analysis.
+    \item \textbf{Data Agnosticism:} Regardless of the data source Fluentd seamlessly collects and processes data in a unified format.
+    \item \textbf{Configurable Routing:} Effortlessly configure log routing based on application or service, directing logs to specific destinations for centralized storage and analysis.
     \item \textbf{Flexibility:} Fluentd's versatility enables us to send data from any source to any destination, empowering us to adapt to evolving logging requirements seamlessly.
 \end{itemize}
 
