Change image folder name

--- a/report/main.tex
+++ b/report/main.tex
@@ -14,7 +14,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{listings}
 
-\graphicspath{ {./img/} }
+\graphicspath{ {./images/} }
 
 \title{DevOps Report}
 \author{Group F \\ nicje, mlsc, dmon, gelu, piro}
