--- a/report/sections/process_perspective/scaling.tex
+++ b/report/sections/process_perspective/scaling.tex
@@ -19,7 +19,7 @@ However, we have not implemented an automatic scaling strategy. For now, the str
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.50\textwidth]{img/deployment.pdf}
+		\includegraphics[width=0.50\textwidth]{deployment.pdf}
 	\end{center}
 	\caption{Deployment view of our system.}\label{fig:deployment}
 \end{figure}
