--- a/report/sections/system_perspective/design_architecture.tex
+++ b/report/sections/system_perspective/design_architecture.tex
@@ -19,7 +19,7 @@ Both areas use the same object-relational mapping and data abstraction. As such,
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.50\textwidth]{img/module1.pdf}
+		\includegraphics[width=0.50\textwidth]{module1.pdf}
 	\end{center}
 	\caption{Module view of the top-level modules of the MiniTwit application component.}\label{fig:module1}
 \end{figure}
