remove some workds from monitoring.tex

--- a/report/sections/process_perspective/monitoring.tex
+++ b/report/sections/process_perspective/monitoring.tex
@@ -8,7 +8,7 @@
 
 \subsection{Grafana}
 \subsubsection{Decision Log}
-\paragraph{} Grafana perfectly compliments Prometheus for its powerful and intuitive ability for data visualization. Its also an open-souce tool, that we decided to use for its ability to visualize all our required metrics. In addition, multiple data sources can be easily set up for a single visualization dashboard, making the monitoring of our application easy.
+\paragraph{} Grafana is an open-souce tool, that we decided to use for its ability to visualize all our required metrics. In addition, multiple data sources can be easily set up for a single visualization dashboard, making the monitoring of our application easy.
 
 \paragraph{} Together, Prometheus and Grafana form a comprehensive monitoring solution that addresses both data collection and visualization needs. Prometheus's robust data collection, combined with Grafana's powerful visualization and dashboarding features, provide a seamless and efficient way to monitor and manage all our systems.
 
