fix author block

--- a/report/main.tex
+++ b/report/main.tex
@@ -16,8 +16,12 @@
 
 \graphicspath{ {./images/} }
 
-\title{DevOps Report}
-\author{Group F \\ nicje, mlsc, dmon, gelu, piro}
+\title{DevOps Report\\ Group F}
+\author{Nicklas Jeppesen\\ \texttt{nicje@itu.dk} \and
+Markus Larion Schlögl\\ \texttt{mlsc@itu.dk} \and
+David Falces Monton\\ \texttt{dmon@itu.dk} \and
+Gert Luzkov \\ \texttt{gelu@itu.dk} \and
+Pierre Rouvillain\\ \texttt{piro@itu.dk}\\ \texttt{s223174@student.dtu.dk}}
 \date{May 2024}
 
 \begin{document}
