--- a/report/sections/process_perspective/security.tex
+++ b/report/sections/process_perspective/security.tex
@@ -29,13 +29,13 @@
 		\item SQL injection: SQL injection would allow attackers to access and modify user data.
 		\item Cross Site Scripting (XSS): Cross Site Scripting would allow attackers to potentially access and modify user data, as well as to sent malicious information to users.
 	\end{itemize}
-	We need to emphasise that we have checked our code for such vulnerabilities, and we haven't found any. We also follow best practices to avoid such vulnerabilities. However, that does not mean that the vulnerabilities are not present, since it is impossible to prove so.
+	We need to emphasise that we have checked our code for such vulnerabilities, and we haven't found any.
 	\item Missing HTTPS and firewall: The use of basic HTTP could result on attackers snooping on users and obtaining password, or on man-in-the-middle attacks.
 	\item Misconfigured firewall: A misconfigured firewall could give attackers direct access to, amongst others, the DB.
 	\item Stolen SSH keys for the VM: Stolen SSH keys for the VM would allow attackers to execute arbitrary code in our VM.
 	\item Stolen credentials for Graphana: Stolen credentials for Graphana would allow attackers to obtain access to the monitoring data of our system.
 	\item Public Prometheus metrics: Metrics from the application for Prometheus to scrap are publicly available at \textit{/metrics}. Attackers could use this information to gain information about the operations being executed on the system.
-	\item Stolen credentials for GitHub: Stolen credentials or tokens for GitHub would allow attackers to view, modify, and delete our code and/or deployment logic. It would also provide them with access to our secrets and CI/CD pipeline, essentially allowing them to execute arbitrary code in our VM.
+	\item Stolen credentials for GitHub: Stolen credentials or tokens for GitHub would allow attackers to view, modify, and delete our code, CI/CD pipeline and/or deployment logic, essentially allowing them to execute arbitrary code in our VM.
 	\item Stolen credentials for DigitalOcean: Stolen credentials or API keys for DigitalOcean would allow attackers to delete and/or access our VM and database.
 	\item Vulnerabilities in the OS or Docker Images used: Vulnerabilities in the OS or Docker images used could allow attackers to take control over our system.
 	\item Supply chain attacks: Supply chain attacks could cause vulnerabilities to be introduced in the dependencies we use.
@@ -46,26 +46,17 @@
 \paragraph{} Some possible scenarios of attacks are as follows:
 \begin{enumerate}
 	% Note: Add only elements at the end of the list, or you'll have to modify the risk matrix below!
-	\item Attacker performs SQL injection on web application to download sensitive user data.
-	\item Attacker performs SQL injection on API to download sensitive user data.
-	\item Attacker performs XSS on web application to download sensitive user data.
-	\item Attacker performs XSS on web application to deliver malware.
-	\item Attacker performs XSS on web application to download sensitive user data.
+	\item Attacker performs SQL injection to download sensitive user data.
+	\item Attacker performs XSS on web application to download sensitive user data or deliver malware.
 	\item Attacker snoops on user traffic and obtains a user's password, which then uses to impersonate them.
 	\item Attacker performs a man-in-the-middle attack on a user and provides them with false information.
-	\item Attacker steals SSH keys, connects to the VM, from there to the DB, and downloads sensitive user data.
-	\item Attacker steals SSH keys, connects to the VM, and uses it to deliver malware.
+	\item Attacker steals SSH keys, connects to the VM, from there to the DB, and downloads sensitive user data or deliver malware.
 	\item Attacker steals Graphana credentials, connects to it, and learns more information about the usage of our system.
 	\item Attacker connects to \textit{/metrics} and learns more information about the usage of our system.
-	\item Attacker steals GitHub credentials and modifies our code to introduce vulnerabilities.
-	\item Attacker steals GitHub credentials and modifies our CI/CD pipeline to introduce vulnerabilities.
-	\item Attacker steals GitHub credentials and modifies our code or CI/CD pipeline to execute arbitrary code in our system and download sensitive user data.
-	\item Attacker steals GitHub credentials and modifies our code or CI/CD pipeline to execute arbitrary code in our system and deliver malware.
-	\item Attacker steals DigitalOcean credentials and downloads sensitive user data from the DB.
-	\item Attacker steals DigitalOcean credentials and uses our VM to deliver malware.
+	\item Attacker steals GitHub credentials and modifies our code or CI/CD to introduce vulnerabilities, or execute arbitrary code.
+	\item Attacker steals DigitalOcean credentials and downloads sensitive user data from the DB, or use our VM to deliver malware.
 	\item Attacker steals DB credentials and connects directly to it, due to a firewall misconfiguration.
-	\item Attacker uses vulnerabilities our the OS or Docker images to connect to the DB and download user data.
-	\item Attacker uses vulnerabilities our the OS or Docker images to connect to the VM and uses it to deliver malware.
+	\item Attacker uses vulnerabilities our the OS or Docker images to connect to the DB and download user data, or to the VM and deliver malware.
 \end{enumerate}
 
 \subsection{Risk Analysis}
@@ -77,9 +68,9 @@
 \begin{tabular}{|l|l|l|l|}
 	\hline
 	& \textbf{High Impact} & \textbf{Medium Impact} & \textbf{Low Impact} \\ \hline
-	\textbf{Low Likelihood} & 8,9,12,13,14,15,16,17,18 & - & - \\ \hline
-	\textbf{Medium Likelihood} & 19,20 & 1,2,3,4,5 & 10 \\ \hline
-	\textbf{High Likelihood} & - & 6,7 & 11 \\ \hline
+	\textbf{Low Likelihood} & 5,8,9,10 & - & - \\ \hline
+	\textbf{Medium Likelihood} & 11 & 1,2 & 6 \\ \hline
+	\textbf{High Likelihood} & - & 3,4 & 7 \\ \hline
 \end{tabular}
 
 \subsubsection{Steps to take}
@@ -89,8 +80,7 @@
 	\item Encrypt our SSH key with a passphrase in order to make it more difficult to steal.
 	\item Hide Graphana behind a firewall.
 	\item Limit the access to \textit{/metrics}.
-	\item Use two-factor-authentication in all GitHub accounts of the team members.
-	\item Use two-factor-authentication in all DigitalOcean accounts of the team members.
+	\item Use two-factor-authentication in all GitHub and DigitalOcean accounts of the team members.
 	\item Continue using best practices when developing, regarding SQL injection and XSS attacks.
 	\item Be aware of the dependencies we are using and their potential vulnerabilities, and keep them updated.
 \end{itemize}
