--- a/report/sections/system_perspective/intro.tex
+++ b/report/sections/system_perspective/intro.tex
@@ -5,16 +5,7 @@
 
 \subsection{Choice of Web framwork}
 In our project, we have choosen to work with \textit{.NET}, the Microsoft open source web framework, in conjunction with Postgres, an open source database.
-The choice of .NET is based on several factors:
-
-\begin{enumerate}
-	\item It has the backing of Microsoft, a very large organisation, which dedicates significant resources to developing and maintaing the framework.
-	\item Besides Microsoft, the .NET-framework has a large userbase and community, which improves the probability that any issues we encounter are addresses by other users in various software delopment forums.
-	\item Microsoft provides an expansive set of templates and sample implementations for common usecases, which means that initialising a new web application is very easy and straight forward.
-	\item The main programming language of .NET, \textit{C\#} is very mature and performant. %known to be a relative fast and relable langauge which also motivate our choice of choosing Microsoft .Net solution.
-	\item Lastly, the .NET framework and C\# are popular amongst software companies in Denmark, so by choosing these technologies, we learn skills that are in need in the industry.
-\end{enumerate}
-
+The choice of .NET is based on several factors, .Net is free open source maintain by microsoft, which lower the cost and trust that the framwork is highest posible quality, its good for medium to large projects, has large community, using the langauge \textit{C\#} which is known to be a relative fast program and also maintain by microsft and last many companies in Denmark using \textit{C\#} and .Net so there is a high properbility that the knowloedge we gain is something we can use after University. 
 
 \subsection{Virtualization Techniques and Deployment Targets}
 
