--- a/report/sections/process_perspective/ai.tex
+++ b/report/sections/process_perspective/ai.tex
@@ -1,8 +1,6 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = en_GB
 \section{AI-Systems used during the project}
-\paragraph{} During the project we have used the AI systems ChatGPT and GitHub Copilot. We have used them mainly to help in debugging, to fix simple errors, like f.i. syntax errors, or to perform menial tasks such as translating from one language to another. This is due to the fact that these AI-assistants do not seem to work very well with bigger tasks, as they lack the view of the "big picture".
+\paragraph{} During the project we have used the AI systems ChatGPT and GitHub Copilot. We have used them mainly to help in debugging, to fix simple errors, like f.i. syntax errors, or to perform menial tasks such as translating from one language to another. This is due to the fact that these AI-assistants do not seem to work very well with bigger tasks, as they lack the view of the "big picture". For example they tend to make a first guess and then try to find solutions within the area of the first suggestion, which can lead to losing a lot of time because the fix of the problem lies somewhere else completely. When implementing our E2E tests with Cypress ChatGPT tried to find the solution in the docker compose file, but basically it was our test file naming what caused problem.
 
-\paragraph{} The problem is when there are more complex errors, especially when they are between two or more systems. They tend makes a first guess and then try to find solutions within the area of the first suggestion, which can lead to losing a lot of time because the fix of the problem lies somewhere else completely. An example for this happened when we were implementing our E2E tests with Cypress. ChatGPT tried to find the solution in the docker compose file, but basically it was our test file naming what was the problem.
-
-\paragraph{} As a conclusion, the use of AI-systems can save time and make development efficient, if used in the right places. When ChatGPT or other AI assistants do not give the correct answer within the first tries it is good advice to stop using it and try to resolve the issue by yourself. 
+\paragraph{} As a conclusion, the use of AI-systems can save time and make development efficient, if used in the right places. When those systems do not give the correct answer within the first tries it is good advice to stop using it and try to resolve the issue by yourself. 
