--- a/report/sections/process_perspective/logging.tex
+++ b/report/sections/process_perspective/logging.tex
@@ -8,10 +8,10 @@ In order to manage difficulties like logs scattered across multiple sources or d
 Fluentd is an open source data collector which processes the data from various sources, making it easier to manage and analyze. 
 The following aspects show why we used Fluentd: 
 \begin{itemize}
-    \item \textbf{Unified Logging Layer:} Fluentd provides a unified platform for collecting, transforming, and routing logs from diverse sources, simplifying the log management process.
-    \item \textbf{Data Agnosticism:} Regardless of the data source Fluentd seamlessly collects and processes data in a unified format.
+    \item \textbf{Unified Logging Layer:} Provides a unified platform for collecting, transforming, and routing logs from diverse sources.
+    \item \textbf{Data Agnosticism:} Seamlessly collects and processes data in a unified format regardless of the data source.
     \item \textbf{Configurable Routing:} Effortlessly configure log routing based on application or service, directing logs to specific destinations for centralized storage and analysis.
-    \item \textbf{Flexibility:} Fluentd's versatility enables us to send data from any source to any destination, empowering us to adapt to evolving logging requirements seamlessly.
+    \item \textbf{Flexibility:} Enables us to send data from any source to any destination.
 \end{itemize}
 
 \subsubsection{Implementation of Fluentd}
